feat: decoupling dao and services (#155)
- remove the use of entities in services
- refactoring on numerous services
- rename/move classes to better adapt with the architecture